# MyPlace2025

./: CMakeLists.txt  ImportantConcepts.txt  MeshTemp.txt
Util/: Transform.h
res/Shaders/: bindless.frag  bindless.vert  default.frag  default.vert  ray.frag  ray.vert  robin.frag  robin.vert  skybox.frag  skybox.vert  temp.txt
res/Shaders/Compute/: default_compute.glsl
res/Shaders/CrazyShaders/: swirl.frag  swirl.vert
res/Shaders/Fractals/: Fractal.frag  Fractal.vert
res/Shaders/Phong/: default.frag
src/: Common.h  DevNotes.txt  Engine.cpp  Engine.h  main.cpp
src/Common/: Types.h
src/Core/: Camera.cpp  Camera.h  FileSystem.h  Input.h  Inputt.cpp  ResourceManager.h  Window.cpp  Window.h
src/Game/: Game.cpp  Game.h  Scene.cpp  Scene.h
src/OpenGL/: GLError.h
src/OpenGL/GPTBIN/: GPT
src/Renderer/: RenderData.cpp  RenderData.h  Renderer.cpp  Renderer.h
src/Renderer/Types/: CubeMap.cpp  CubeMap.h  Mesh.cpp  Mesh.hpp  Model.cpp  Model.h  Model.hpp  ModelMesh.h  Shapes.h  Texture.cpp  Texture.h
src/Shader/: ModelShader.h  Shader.cpp  Shader.h
x64/Debug/: vc143.idb
x64/Debug/MyHell2024.tlog/: CL.command.1.tlog  MyHell2024.lastbuildstate
